feat: implement View Transition API example

--- a/apps/angular-template/src/styles/styles.scss
+++ b/apps/angular-template/src/styles/styles.scss
@@ -1,9 +1,6 @@
 @use 'reset';
+@use 'transitions';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  font-size: 16px;
-}
